Including bootstrap in the project
Just adding the bootstrap code in the project, rather than linking out to it somewhere

--- a/test.html
+++ b/test.html
@@ -10,12 +10,11 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="bootstrap-4.2.1-dist/js/bootstrap.min.js"></script>
 
-    <title>Jackson Hammond</title>
+    <title>Test Page</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
-
-    <a href = "test.html">This is a test</a>
+    
+    <h1>Hello there</h1>
 
   </body>
 </html>
