--- a/About.html
+++ b/About.html
@@ -10,7 +10,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="bootstrap-4.2.1-dist/js/bootstrap.min.js"></script>
 
-    <title>Jackson Hammond</title>
+    <title>Test Page</title>
   </head>
   <body>
 
@@ -33,9 +33,14 @@
         </ul>
       </div>
     </nav>
-    <h1>Hello, world!</h1>
 
-    <a href = "test.html">This is a test</a>
+    <p>I’m a designer who cares about the environment, privacy, and which book to read next. I believe UX design is a way I can have fun and also make a positive impact on the world.</p>
+
+    <p>I was born and raised in Michigan, and I attended the University of Michigan where I concentrated in Informatics. Then I spent a few years working with electronic health record software, before being drawn towards the design field. I’m currently back at UM, and working on my master’s in UX Research and Design.</p>
+
+    <p>Data visualization is what fascinates me, and you can often find me browsing r/dataisbeautiful when I’m procrastinating. I’m hoping to combine my technical background with the design principles I’m learning now to find new and better ways to present complicated data to users.</p>
+
+    <p>In my free time I like to get outside and stay active, read, cook, and practice drumset. I also love flowers and great food, and I plan my vacations around which botanical gardens and restaurants to visit. I highly recommend the garden at Utrecht University and the Wright Brothers seafood merchant in London!</p>
 
   </body>
 </html>
