More small tweaks

--- a/About.html
+++ b/About.html
@@ -14,33 +14,39 @@
   </head>
   <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Jackson Hammond</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="#">Work</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="About.html">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Resume</a>
-          </li>
-        </ul>
+    <div class = "container">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light ">
+        <a class="navbar-brand" href="#">Jackson Hammond</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Work</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="About.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Resume</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+
+    <div class = "container">
+      <div class = "row">
+        <p>I’m a designer who cares about the environment, privacy, and which book to read next. I believe UX design is a way I can have fun and also make a positive impact on the world.</p>
+
+        <p>I was born and raised in Michigan, and I attended the University of Michigan where I concentrated in Informatics. Then I spent a few years working with electronic health record software, before being drawn towards the design field. I’m currently back at UM, and working on my master’s in UX Research and Design.</p>
+
+        <p>Data visualization is what fascinates me, and you can often find me browsing <a href = "https://www.reddit.com/r/dataisbeautiful">r/dataisbeautiful</a> when I’m procrastinating. I’m hoping to combine my technical background with the design principles I’m learning now to find new and better ways to present complicated data to users.</p>
+
+        <p>In my free time I like to get outside and stay active, read, cook, and practice drumset. I also love flowers and great food, and I plan my vacations around which botanical gardens and restaurants to visit. I highly recommend the garden at Utrecht University and the Wright Brothers seafood merchant in London!</p>
       </div>
-    </nav>
-
-    <p>I’m a designer who cares about the environment, privacy, and which book to read next. I believe UX design is a way I can have fun and also make a positive impact on the world.</p>
-
-    <p>I was born and raised in Michigan, and I attended the University of Michigan where I concentrated in Informatics. Then I spent a few years working with electronic health record software, before being drawn towards the design field. I’m currently back at UM, and working on my master’s in UX Research and Design.</p>
-
-    <p>Data visualization is what fascinates me, and you can often find me browsing r/dataisbeautiful when I’m procrastinating. I’m hoping to combine my technical background with the design principles I’m learning now to find new and better ways to present complicated data to users.</p>
-
-    <p>In my free time I like to get outside and stay active, read, cook, and practice drumset. I also love flowers and great food, and I plan my vacations around which botanical gardens and restaurants to visit. I highly recommend the garden at Utrecht University and the Wright Brothers seafood merchant in London!</p>
+    </div>
 
   </body>
 </html>
