--- a/index.html
+++ b/index.html
@@ -13,29 +13,44 @@
     <title>Jackson Hammond</title>
   </head>
   <body>
+    <div class = "container">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light ">
+        <a class="navbar-brand" href="#">Jackson Hammond</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Work</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="About.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Resume</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Jackson Hammond</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="#">Work</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="About.html">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Resume</a>
-          </li>
-        </ul>
+    <div class = "jumbotron">
+      <div class = "container">
+        <div class = "row">
+          <div class = "col-3">
+            <h1 style = "text-align:right">Jackson Hammond</h1>
+          </div>
+          <div class = "col-9">
+            <h3>UX Designer</h3>
+          </div>
+        </div>
       </div>
-    </nav>
-    <h1>Hello, world!</h1>
+    </div>
 
-    <a href = "About.html">This is a test</a>
+    <div class = "container">
+      <a href = "About.html">This is a test</a>
+    </div>
 
   </body>
 </html>
