--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 
+    <link rel = "stylesheet" type = "text/css" href = "main.css">
+
     <title>Jackson Hammond</title>
   </head>
   <body>
@@ -35,21 +37,37 @@
       </nav>
     </div>
 
-    <div class = "jumbotron">
+    <div class = "jumbotron jumbotron-fluid" id = "mainJumbotron">
       <div class = "container">
         <div class = "row">
-          <div class = "col-3">
-            <h1 style = "text-align:right">Jackson Hammond</h1>
+          <div class = "col-sm-3">
+            <h1 style = "text-align:right; font-family:Playfair; color:white">Jackson Hammond</h1>
           </div>
-          <div class = "col-9">
-            <h3>UX Designer</h3>
+          <div class = "col-sm-9">
+            <h3 style = "font-family:Playfair; color:white">UX Designer</h3>
           </div>
         </div>
       </div>
     </div>
 
     <div class = "container">
-      <a href = "About.html">This is a test</a>
+      <div class = "row">
+        <div class = "col-sm-4">
+          <div class = "thumbnail">
+            <a href = "projects/3D_Emergency.html">
+              <img src = "assets/3DE Centered Logo.png" alt = "3D Emergency" style = "width:100%">
+              <div class = "caption">
+                <p>3D Emergency</p>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class = "col-sm-4">
+          <p>Project 2</p>
+        </div>
+        <div class = "col-sm-4">
+          <p>Project 3</p>
+        </div>
     </div>
 
   </body>
