change image name

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class = "col-sm-4">
           <div class = "thumbnail">
             <a href = "projects/3D_Emergency.html">
-              <img src = "assets/3DE Centered Logo.png" alt = "3D Emergency" style = "width:100%">
+              <img src = "assets/Centered Logo.png" alt = "3D Emergency" style = "width:100%">
               <div class = "caption">
                 <p>3D Emergency</p>
               </div>
