--- a/index.html
+++ b/index.html
@@ -40,11 +40,9 @@
     <div class = "jumbotron jumbotron-fluid" id = "mainJumbotron">
       <div class = "container">
         <div class = "row">
-          <div class = "col-sm-3">
-            <h1 style = "text-align:right; font-family:Playfair; color:white">Jackson Hammond</h1>
-          </div>
-          <div class = "col-sm-9">
-            <h3 style = "font-family:Playfair; color:white">UX Designer</h3>
+          <div class = "col-sm-1"></div>
+          <div class = "col-sm-7">
+            <h3 style = "font-family:Playfair Display; color:#F23C50; font-size:60px">I'm Jackson Hammond, UX Designer and lover of data</h3>
           </div>
         </div>
       </div>
