More navbar changes

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <div class = "container">
-      <nav class="navbar navbar-expand-lg navbar-light bg-light ">
+      <nav class="navbar navbar-expand-lg fixed-top" style = "background-color: #FFC205">
         <a class="navbar-brand" href="#">Jackson Hammond</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -41,8 +41,8 @@
       <div class = "container">
         <div class = "row">
           <div class = "col-sm-1"></div>
-          <div class = "col-sm-7">
-            <h3 style = "font-family:Playfair Display; color:#F23C50; font-size:60px">I'm Jackson Hammond, UX Designer and lover of data</h3>
+          <div class = "col-sm-8">
+            <h3 style = "font-family:Playfair Display; color:#F23C50; font-size:60px; font-weight:bold">I'm Jackson Hammond, UX Designer and lover of data</h3>
           </div>
         </div>
       </div>
