--- a/About.html
+++ b/About.html
@@ -17,7 +17,7 @@
   <body>
 
     <div class = "container">
-      <nav class="navbar navbar-expand-lg navbar-light bg-light ">
+      <nav class="navbar navbar-expand-lg fixed-top" style = "background-color: #FFC205">
         <a class="navbar-brand" href="#">Jackson Hammond</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
