--- a/About.html
+++ b/About.html
@@ -16,8 +16,7 @@
   </head>
   <body>
 
-    <div class = "container">
-      <nav class="navbar navbar-expand-lg fixed-top" style = "background-color: #FFC205">
+      <nav class="navbar navbar-expand-lg" style = "background-color: #FFC205">
         <a class="navbar-brand" href="#">Jackson Hammond</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -36,7 +35,6 @@
           </ul>
         </div>
       </nav>
-    </div>
 
     <div class = "container">
       <div class = "row">
