--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     <title>Jackson Hammond</title>
   </head>
   <body>
-    <div class = "container">
-      <nav class="navbar navbar-expand-lg fixed-top" style = "background-color: #FFC205">
+      <nav class="navbar navbar-expand-lg" style = "background-color: #FFC205">
         <a class="navbar-brand" href="#">Jackson Hammond</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -33,7 +32,7 @@
               <a class="nav-link" href="#">Resume</a>
             </li>
           </ul>
-        </div>
+
       </nav>
     </div>
 
