Fixing links in the navbar

--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@
   </head>
   <body>
       <nav class="navbar navbar-expand-lg" style = "background-color: #FFC205">
-        <a class="navbar-brand" href="#">Jackson Hammond</a>
+        <a class="navbar-brand" href="index.html">Jackson Hammond</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="#">Work</a>
+              <a class="nav-link" href="index.html">Work</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="About.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Resume</a>
+              <a class="nav-link" href="assets/Jackson Hammond - Resume.pdf">Resume</a>
             </li>
           </ul>
 
