--- a/About.html
+++ b/About.html
@@ -36,17 +36,22 @@
         </div>
       </nav>
 
-    <div class = "container">
+    <div class = "container" style = "margin-top:100px">
       <div class = "row">
-        <p>I’m a designer who cares about the environment, privacy, and which book to read next. I believe UX design is a way I can have fun and also make a positive impact on the world.</p>
+        <div class = "col-sm-6">
+          <p>I’m a designer who cares about the environment, privacy, and which book to read next. I believe UX design is a way I can have fun and also make a positive impact on the world. I’m currently working on my master’s in UX Research and Design at the University of Michigan and searching for internships.</p>
 
-        <p>I was born and raised in Michigan, and I attended the University of Michigan where I concentrated in Informatics. Then I spent a few years working with electronic health record software, before being drawn towards the design field. I’m currently back at UM, and working on my master’s in UX Research and Design.</p>
+          <p>Data visualization is what fascinates me, and you can often find me browsing <a href = "https://www.reddit.com/r/dataisbeautiful">r/dataisbeautiful</a> when I’m procrastinating. I’m hoping to combine my technical background with the design principles I’m learning now to find new and better ways to present complicated data to users.</p>
 
-        <p>Data visualization is what fascinates me, and you can often find me browsing <a href = "https://www.reddit.com/r/dataisbeautiful">r/dataisbeautiful</a> when I’m procrastinating. I’m hoping to combine my technical background with the design principles I’m learning now to find new and better ways to present complicated data to users.</p>
+          <p>In my free time I like to get outside and stay active, read, cook, brew coffee, and practice drumset.</p>
 
-        <p>In my free time I like to get outside and stay active, read, cook, and practice drumset. I also love flowers and great food, and I plan my vacations around which botanical gardens and restaurants to visit. I highly recommend the garden at Utrecht University and the Wright Brothers seafood merchant in London!</p>
+        </div>
+        <div class = "col-sm-6">
+          <img src = "assets/Picture of me.jpg" style = "width:100%">
+        </div>
       </div>
     </div>
+
 
   </body>
 </html>
