--- a/index.html
+++ b/index.html
@@ -11,17 +11,20 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 
     <link rel = "stylesheet" type = "text/css" href = "main.css">
+    <link href="https://fonts.googleapis.com/css?family=Rubik:300,500" rel="stylesheet">
 
     <title>Jackson Hammond</title>
   </head>
   <body>
-      <nav class="navbar navbar-expand-lg" style = "background-color: #FFC205">
-        <a class="navbar-brand" href="index.html">Jackson Hammond</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+
+    <nav class="navbar navbar-expand-md fixed-top">
+      <div class = "container">
+        <a class="navbar-brand" href="#">Jackson Hammond</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav ml-auto" id="homeNavLinks">
             <li class="nav-item">
               <a class="nav-link" href="index.html">Work</a>
             </li>
@@ -32,16 +35,17 @@
               <a class="nav-link" href="assets/Jackson Hammond - Resume.pdf">Resume</a>
             </li>
           </ul>
+        </div>
+      </div>
+    </nav>
 
-      </nav>
-    </div>
 
     <div class = "jumbotron jumbotron-fluid" id = "mainJumbotron">
       <div class = "container">
         <div class = "row">
           <div class = "col-sm-1"></div>
           <div class = "col-sm-8">
-            <h3 style = "font-family:Playfair Display; color:#F23C50; font-size:60px; font-weight:bold">I'm Jackson Hammond, UX Designer and lover of data</h3>
+            <h3>I'm <strong>Jackson Hammond</strong>, UX Designer and lover of data</h3>
           </div>
         </div>
       </div>
