Full blue home page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <title>Jackson Hammond</title>
   </head>
   <body>
-
+    <div id="backdrop">
     <nav class="navbar navbar-expand-md fixed-top">
       <div class = "container">
         <a class="navbar-brand" href="#">Jackson Hammond</a>
@@ -69,7 +69,8 @@
         <div class = "col-sm-4">
           <p>Project 3</p>
         </div>
+      </div>
     </div>
-
+  </div>
   </body>
 </html>
