Added navbar to 582 project page

--- a/projects/3D_Emergency.html
+++ b/projects/3D_Emergency.html
@@ -14,8 +14,33 @@
   </head>
 
   <body>
-    <div class = "container">
-      <h1>Stuff about my first project goes here</h1>
+
+    <nav class="navbar navbar-expand-md fixed-top">
+      <div class = "container">
+        <a class="navbar-brand" href="#">Jackson Hammond</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav ml-auto" id="homeNavLinks">
+            <li class="nav-item">
+              <a class="nav-link" href="http://jbhammon.github.io">Work</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="http://jbhammon.github.io/About.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="http://jbhammon.github.io/assets/Jackson Hammond - Resume.pdf">Resume</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <div class="jumbotron">
+      <div class = "container">
+        <h1>3D Emergency</h1>
+      </div>
     </div>
   </body>
 </html>
