--- a/projects/3D_Emergency.html
+++ b/projects/3D_Emergency.html
@@ -10,9 +10,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 
-    <link rel = "stylesheet" type = "text/css" href = "main.css">
+    <link rel = "stylesheet" type = "text/css" href = "../main.css">
     <link href="https://fonts.googleapis.com/css?family=Rubik:300,500" rel="stylesheet">
-    
+
   </head>
 
   <body>
