--- a/projects/3D_Emergency.html
+++ b/projects/3D_Emergency.html
@@ -41,8 +41,54 @@
 
     <div class="jumbotron">
       <div class = "container">
-        <h1>3D Emergency</h1>
+        <div class = "row">
+          <h1>3D Emergency</h1>
+        </div>
+        <div class = "row">
+          <p>A solo project focusing on interaction design as a method to improve calling 911 in the United States.<br><br>
+          <b>Role:</b> UX Designer and Researcher<br>
+          <b>Tools:</b> Adobe Illustrator and Adobe XD</p>
+        </div>
       </div>
     </div>
+
+    <!---Actual content about the project --->
+    <div class="container">
+
+      <div class = "row">
+        <div class="col-sm-12">
+          <p>insert images here</p>
+        </div>
+      </div>
+
+      <div class = "row">
+        <div class="col-sm-12">
+          <h4>Inspiration</h4>
+          <p>I toured a local 911 center, and their primary concern was call processing time, or how long their operators spent speaking with each caller. I saw how much of the work was still done manually, and knew that meant more time callers had to spend on hold.</p>
+          <h4>Design Goal</h4>
+          <p>After speaking with 911 dispatchers I learned that GPS coordinates from smartphones are being incorporated into the 911 call process, but they're not a panacea. This project was an attempt to design a new tool that can be used when dialing 9-1-1 in the United States that would help decrease the time it takes to locate a caller.</p>
+          <h4>Outcome</h4>
+          <p>I re-imagined the interaction between 911 callers and dispatchers when callers need to describe their specific location within a building. I did this by adding a new tool to caller's physical environments, QR codes, and designed a solution to integrate them with the current process of calling 911. I created prototypes to model how the new interactions would happen on both a caller's smartphone and the monitors in front of 911 dispatchers.</p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-12">
+          <h3>The New Tools</h3>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-6">
+          <p>insert gif here</p><br>
+          <p>Scanning QR code mid-call</p>
+        </div>
+        <div class="col-sm-6">
+          <p>Callers would be able to use the camera built into their smartphone to scan emergency QR code posters that are in the room with them. The location information that's encoded in them would be pulled out and displayed for them to communicate to the 911 dispatcher they're speaking with.</p>
+        </div>
+      </div>
+
+    </div>
+
   </body>
 </html>
