Adding more copy

--- a/projects/3D_Emergency.html
+++ b/projects/3D_Emergency.html
@@ -63,11 +63,11 @@
 
       <div class = "row">
         <div class="col-sm-12">
-          <h4>Inspiration</h4>
+          <h5>Inspiration</h5>
           <p>I toured a local 911 center, and their primary concern was call processing time, or how long their operators spent speaking with each caller. I saw how much of the work was still done manually, and knew that meant more time callers had to spend on hold.</p>
-          <h4>Design Goal</h4>
+          <h5>Design Goal</h5>
           <p>After speaking with 911 dispatchers I learned that GPS coordinates from smartphones are being incorporated into the 911 call process, but they're not a panacea. This project was an attempt to design a new tool that can be used when dialing 9-1-1 in the United States that would help decrease the time it takes to locate a caller.</p>
-          <h4>Outcome</h4>
+          <h5>Outcome</h5>
           <p>I re-imagined the interaction between 911 callers and dispatchers when callers need to describe their specific location within a building. I did this by adding a new tool to caller's physical environments, QR codes, and designed a solution to integrate them with the current process of calling 911. I created prototypes to model how the new interactions would happen on both a caller's smartphone and the monitors in front of 911 dispatchers.</p>
         </div>
       </div>
@@ -80,11 +80,22 @@
 
       <div class="row">
         <div class="col-sm-6">
+          <h5>QR Code Integration</h5>
           <p>insert gif here</p><br>
           <p>Scanning QR code mid-call</p>
         </div>
         <div class="col-sm-6">
           <p>Callers would be able to use the camera built into their smartphone to scan emergency QR code posters that are in the room with them. The location information that's encoded in them would be pulled out and displayed for them to communicate to the 911 dispatcher they're speaking with.</p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-9">
+          <h5>Floorplan visualization</h5>
+          <p>insert gifs here</p>
+        </div>
+        <div class="col-sm-3">
+          <p>Dispatchers, left, and callers, right, would be able to visualize their new location information, saving the dispatchers valuable time.</p>
         </div>
       </div>
 
