Added the rest of the copy for the 582 project

--- a/projects/3D_Emergency.html
+++ b/projects/3D_Emergency.html
@@ -99,6 +99,88 @@
         </div>
       </div>
 
+      <div class="row">
+        <div class="col-sm-12">
+          <h3>Research and Design Process</h3>
+          <p>I started brainstorming about two approaches for reducing 911 call processing time. On one hand were solutions to help operators, and on the other were solutions to help callers. Then I turned those ideas into some storyboards.</p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-12">
+          <p>Storyboard images here</p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-12">
+          <br>
+          <p>One idea has stuck out to me, because it could solve a problem the 911 call center manager said she hasn't heard a good solution for yet. Figuring out which floor or room of a building you're in isn't something that GPS can help with, and can slow down operators. What if we encoded that information in an easy way for smart phones to process like QR codes? </p>
+          <br>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-6">
+          <p>first final sketch </p>
+        </div>
+        <div class="col-sm-6">
+          <p>second final sketch</p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-12">
+          <br>
+          <p>I created some personas and story maps to help further understand the details an emergency system like this would need. I drew inspiration for the persona design from <a href="https://compose.ly/strategy/user-persona-guide/">Compose.ly<a/>, and created the story maps with <a href="https://cardboardit.com/">Cardboard</a>.</p>
+          <br>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-12">
+          <br>
+          <p>Personas go here</p>
+          <br>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-12">
+          <br>
+          <p>Before I started making wireframes and paper prototypes I needed to iron out a few design details with some of the features I had proposed. Using a QOC analysis I decided to implement the critical feature of scanning QR codes to find location information by:</p>
+          <ul>
+            <li>Scanning a poster of a QR code once a 911 call has been placed</li>
+            <li>A button on the call screen will take the user to their camera app to scan the poster</li>
+            <li>The new location info will be added to the call screen after scanning without showing delivery receipts</li>
+          <br>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-12">
+          <br>
+          <h3>Prototypes and Demos</h3>
+          <p>Links to demos of a paper and mid-fidelity prototype are below.</p>
+          <br>
+          <a href="https://youtu.be/E_Wjl02KlPY">Paper Prototype</a><br>
+          <a href="https://youtu.be/kfK_NslRQ0A">Mid-Fidelity Prototype</a><br>
+          <a href="https://youtu.be/XBtnex3qL28">Final Prototype Demo</a><br>
+          <br>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-12">
+          <br>
+          <h5>Reflection</h5>
+          <p>This project was a unique challenge for me to take on. It involved designing and prototyping interfaces for two separate parties using different devices working together to achieve a goal. I believe my final solution was creative and practical, but there is certainly room for improvement. QR codes are one way to encode information for smartphones to use, but they aren't foolproof. Providing a secondary way to input this room number information is something that warrants more research.
+          <br><br>
+          I plan to also present this idea to the local 911 center I toured at the beginning of this project to gather feedback from the experts there. I hope they can help improve the dispatcher UI I designed, and suggest other useful information to include on the interactive floor plan.</p>
+          <br>
+        </div>
+      </div>
+
     </div>
 
   </body>
