--- a/index.html
+++ b/index.html
@@ -10,13 +10,18 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 
+    <!--- Parallax Code --->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="C:\Users\malts\Documents\GitHub\parallax.js"></script>
+    <!--- --->
+
     <link rel = "stylesheet" type = "text/css" href = "main.css">
     <link href="https://fonts.googleapis.com/css?family=Rubik:300,500" rel="stylesheet">
 
     <title>Jackson Hammond</title>
   </head>
   <body>
-    <div id="backdrop">
+
     <nav class="navbar navbar-expand-md fixed-top">
       <div class = "container">
         <a class="navbar-brand" href="#">Jackson Hammond</a>
@@ -39,6 +44,9 @@
       </div>
     </nav>
 
+    <!--- --->
+    <div class="parallax-window" data-parallax="scroll" data-image-src="assets/Flower Picture.jpg"></div>
+    <!--- --->
 
     <div class = "jumbotron jumbotron-fluid" id = "mainJumbotron">
       <div class = "container">
@@ -51,26 +59,49 @@
       </div>
     </div>
 
-    <div class = "container">
-      <div class = "row">
-        <div class = "col-sm-4">
-          <div class = "thumbnail">
-            <a href = "projects/3D_Emergency.html">
-              <img src = "assets/Centered Logo.png" alt = "3D Emergency" style = "width:100%">
-              <div class = "caption">
-                <p>3D Emergency</p>
-              </div>
-            </a>
+    <div style="background-color:#9A67EA; padding: 30px;">
+      <div class="container">
+        <h4 style="color:#000000">Work</h4>
+      </div>
+    </div>
+
+    <div style="background-color:#E1E2E1">
+      <div class = "container">
+        <div class = "row">
+          <div class = "col-sm-4">
+            <div class = "thumbnail">
+              <a href = "projects/3D_Emergency.html" style="position:relative; bottom:30px">
+                <img src = "assets/Centered Logo.png" alt = "3D Emergency" style = "width:100%">
+                <div class = "caption">
+                  <p class="project-name">3D Emergency</p>
+                  <p class="project-type">UX Design</p>
+                </div>
+              </a>
+            </div>
           </div>
-        </div>
-        <div class = "col-sm-4">
-          <p>Project 2</p>
-        </div>
-        <div class = "col-sm-4">
-          <p>Project 3</p>
+          <div class = "col-sm-4">
+            <div class = "thumbnail">
+              <a href = "projects/3D_Emergency.html" style="position:relative; bottom:30px">
+                <img src = "assets/Canal Picture.jpg" alt = "Canal" style = "width:100%">
+                <div class = "caption">
+                  <p class="project-name">Project 2</p>
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class = "col-sm-4">
+            <div class = "thumbnail">
+              <a href = "projects/3D_Emergency.html" style="position:relative; bottom:30px">
+                <img src = "assets/Flower Picture.jpg" alt = "Flower" style = "width:100%">
+                <div class = "caption">
+                  <p class="project-name">Project 3</p>
+                </div>
+              </a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-  </div>
+
   </body>
 </html>
