--- a/projects/3D_Emergency.html
+++ b/projects/3D_Emergency.html
@@ -13,6 +13,8 @@
     <link rel = "stylesheet" type = "text/css" href = "../main.css">
     <link href="https://fonts.googleapis.com/css?family=Rubik:300,500" rel="stylesheet">
 
+    <!--- Not relevant, but who hurt this poor guy: https://www.youtube.com/watch?v=Co91PGhfZ-o --->
+
   </head>
 
   <body>
