Added pictures to 3DE project

--- a/projects/3D_Emergency.html
+++ b/projects/3D_Emergency.html
@@ -58,8 +58,17 @@
     <div class="container">
 
       <div class = "row">
-        <div class="col-sm-12">
-          <p>insert images here</p>
+        <div class="col-sm-3">
+          <img src="../assets/3D Emergency/Pre Scan with Outline.png" style="width:100%">
+        </div>
+        <div class="col-sm-3">
+          <img src="../assets/3D Emergency/QR Code with Outline.png" style="width:100%">
+        </div>
+        <div class="col-sm-3">
+          <img src="../assets/3D Emergency/Room Info with Outline.png" style="width:100%">
+        </div>
+        <div class="col-sm-3">
+          <img src="../assets/3D Emergency/Post Scan with Outline.png" style="width:100%">
         </div>
       </div>
 
@@ -76,14 +85,18 @@
 
       <div class="row">
         <div class="col-sm-12">
-          <h3>The New Tools</h3>
+          <h4>The New Tools</h4>
         </div>
       </div>
 
       <div class="row">
-        <div class="col-sm-6">
+        <div class="container">
           <h5>QR Code Integration</h5>
-          <p>insert gif here</p><br>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-6">
+          <img src="../assets/3D Emergency/QR Code Scan.gif" style="width:50%">
           <p>Scanning QR code mid-call</p>
         </div>
         <div class="col-sm-6">
@@ -92,25 +105,45 @@
       </div>
 
       <div class="row">
-        <div class="col-sm-9">
+        <div class="container">
           <h5>Floorplan visualization</h5>
-          <p>insert gifs here</p>
         </div>
-        <div class="col-sm-3">
-          <p>Dispatchers, left, and callers, right, would be able to visualize their new location information, saving the dispatchers valuable time.</p>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-6">
+            <img src="../assets/3D Emergency/Dispatch View Map.gif" style="width:100%">
+          </div>
+          <div class="col-sm-3">
+            <img src="../assets/3D Emergency/Phone View Map.gif" style="width:75%">
+          </div>
+          <div class="col-sm-3">
+            <p>Dispatchers, left, and callers, right, would be able to visualize their new location information, saving the dispatchers valuable time.</p>
+          </div>
         </div>
       </div>
 
       <div class="row">
         <div class="col-sm-12">
-          <h3>Research and Design Process</h3>
+          <h4>Research and Design Process</h4>
           <p>I started brainstorming about two approaches for reducing 911 call processing time. On one hand were solutions to help operators, and on the other were solutions to help callers. Then I turned those ideas into some storyboards.</p>
         </div>
       </div>
 
-      <div class="row">
-        <div class="col-sm-12">
-          <p>Storyboard images here</p>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-4">
+            <img src="../assets/3D Emergency/Storyboard 1.jpg" style="width:100%; margin-bottom:5px">
+            <img src="../assets/3D Emergency/Storyboard 2.jpg" style="width:100%">
+          </div>
+          <div class="col-lg-4">
+            <img src="../assets/3D Emergency/Storyboard 3.jpg" style="width:100%; margin-bottom:5px">
+            <img src="../assets/3D Emergency/Storyboard 4.jpg" style="width:100%">
+          </div>
+          <div class="col-lg-4">
+            <img src="../assets/3D Emergency/Storyboard 5.jpg" style="width:100%; margin-bottom:5px">
+            <img src="../assets/3D Emergency/Storyboard 6.jpg" style="width:100%">
+          </div>
         </div>
       </div>
 
@@ -123,11 +156,11 @@
       </div>
 
       <div class="row">
-        <div class="col-sm-6">
-          <p>first final sketch </p>
+        <div class="col-lg-6">
+          <img src="../assets/3D Emergency/Mid call scan sketch.jpg" style="width:100%">
         </div>
-        <div class="col-sm-6">
-          <p>second final sketch</p>
+        <div class="col-lg-6">
+          <img src="../assets/3D Emergency/Sketches from in class pitch.jpg" style="width:100%">
         </div>
       </div>
 
@@ -140,29 +173,51 @@
       </div>
 
       <div class="row">
-        <div class="col-sm-12">
-          <br>
-          <p>Personas go here</p>
-          <br>
+        <div class="col-lg-4">
+          <img src="../assets/3D Emergency/Personas 1.png" style="width:100%">
+        </div>
+        <div class="col-lg-4">
+          <img src="../assets/3D Emergency/Personas 2.png" style="width:100%">
+        </div>
+        <div class="col-lg-4">
+          <img src="../assets/3D Emergency/Personas 3.png" style="width:100%">
         </div>
       </div>
 
       <div class="row">
         <div class="col-sm-12">
-          <br>
-          <p>Before I started making wireframes and paper prototypes I needed to iron out a few design details with some of the features I had proposed. Using a QOC analysis I decided to implement the critical feature of scanning QR codes to find location information by:</p>
-          <ul>
-            <li>Scanning a poster of a QR code once a 911 call has been placed</li>
-            <li>A button on the call screen will take the user to their camera app to scan the poster</li>
-            <li>The new location info will be added to the call screen after scanning without showing delivery receipts</li>
-          <br>
+          <p>Before I started making wireframes and paper prototypes I needed to iron out a few design details with the features I had proposed using a QOC analysis.</p>
         </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <img src="../assets/3D Emergency/Slide10.png" style="width:100%">
+        </div>
+        <div class="col-md-6">
+          <img src="../assets/3D Emergency/Slide11.png" style="width:100%">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <img src="../assets/3D Emergency/Slide12.png" style="width:100%">
+        </div>
+        <div class="col-md-6">
+          <img src="../assets/3D Emergency/Slide13.png" style="width:100%">
+        </div>
+      </div>
+      <div class="row">
+        <p>I decided to implement the critical feature of scanning QR codes to find location information by:</p>
+        <ul>
+          <li>Scanning a poster of a QR code once a 911 call has been placed</li>
+          <li>A button on the call screen will take the user to their camera app to scan the poster</li>
+          <li>The new location info will be added to the call screen after scanning without showing delivery receipts</li>
+        <br>
       </div>
 
       <div class="row">
         <div class="col-sm-12">
           <br>
-          <h3>Prototypes and Demos</h3>
+          <h4>Prototypes and Demos</h4>
           <p>Links to demos of a paper and mid-fidelity prototype are below.</p>
           <br>
           <a href="https://youtu.be/E_Wjl02KlPY">Paper Prototype</a><br>
