Fixed file path capitalization issues

--- a/projects/3D_Emergency.html
+++ b/projects/3D_Emergency.html
@@ -191,18 +191,18 @@
       </div>
       <div class="row">
         <div class="col-md-6">
-          <img src="../assets/3D Emergency/Slide10.png" style="width:100%">
+          <img src="../assets/3D Emergency/Slide10.PNG" style="width:100%">
         </div>
         <div class="col-md-6">
-          <img src="../assets/3D Emergency/Slide11.png" style="width:100%">
+          <img src="../assets/3D Emergency/Slide11.PNG" style="width:100%">
         </div>
       </div>
       <div class="row">
         <div class="col-md-6">
-          <img src="../assets/3D Emergency/Slide12.png" style="width:100%">
+          <img src="../assets/3D Emergency/Slide12.PNG" style="width:100%">
         </div>
         <div class="col-md-6">
-          <img src="../assets/3D Emergency/Slide13.png" style="width:100%">
+          <img src="../assets/3D Emergency/Slide13.PNG" style="width:100%">
         </div>
       </div>
       <div class="row">
