Formatted the 3DE project header

--- a/projects/3D_Emergency.html
+++ b/projects/3D_Emergency.html
@@ -41,13 +41,13 @@
       </div>
     </nav>
 
-    <div class="jumbotron">
+    <div class="jumbotron" id="mainJumbotron">
       <div class = "container">
         <div class = "row">
-          <h1>3D Emergency</h1>
+          <h3>3D Emergency</h3>
         </div>
         <div class = "row">
-          <p>A solo project focusing on interaction design as a method to improve calling 911 in the United States.<br><br>
+          <p style="color:#FFFFFF">A solo project focusing on interaction design as a method to improve calling 911 in the United States.<br><br>
           <b>Role:</b> UX Designer and Researcher<br>
           <b>Tools:</b> Adobe Illustrator and Adobe XD</p>
         </div>
