Images added to MSGC project

--- a/projects/MSGC_Consulting.html
+++ b/projects/MSGC_Consulting.html
@@ -74,7 +74,21 @@
       </div>
 
       <div class="row">
-        <p>images</p>
+        <div class="col-lg-4 col-sm-12">
+          <img src="../assets/MSGC Consulting/Creating 1.JPG" style="width:100%; height:auto">
+        </div>
+        <div class="col-lg-4 col-sm-12">
+          <img src="../assets/MSGC Consulting/Creating 2.JPG" style="width:100%; height:auto">
+        </div>
+        <div class="col-lg-4 col-sm-12">
+          <img src="../assets/MSGC Consulting/Creating 3.JPG" style="width:100%; height:auto">
+        </div>
+        <div class="col-lg-4 col-sm-12">
+          <img src="../assets/MSGC Consulting/Creating 4.JPG" style="width:100%; height:auto">
+        </div>
+        <div class="col-lg-4 col-sm-12">
+          <img src="../assets/MSGC Consulting/Creating 5.JPG" style="width:100%; height:auto">
+        </div>
       </div>
 
       <div class="row">
