Link to msgc project from home page

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <div class = "col-sm-4">
             <div class = "thumbnail">
               <a href = "projects/3D_Emergency.html" style="position:relative; bottom:30px">
-                <img src = "assets/Centered Logo.png" alt = "3D Emergency" style = "width:100%">
+                <img src = "assets/Centered Logo.png" alt = "3D Emergency" style = "width:100%; height:auto">
                 <div class = "caption">
                   <p class="project-name">3D Emergency</p>
                   <p class="project-type">UX Design</p>
@@ -72,10 +72,11 @@
           </div>
           <div class = "col-sm-4">
             <div class = "thumbnail">
-              <a href = "projects/3D_Emergency.html" style="position:relative; bottom:30px">
-                <img src = "assets/Canal Picture.jpg" alt = "Canal" style = "width:100%">
+              <a href = "projects/MSGC_Consulting.html" style="position:relative; bottom:30px">
+                <img src = "assets/MSGC Consulting/Creating 1.jpg" alt = "MSGC Consulting" style = "width:100%; height:auto">
                 <div class = "caption">
-                  <p class="project-name">Project 2</p>
+                  <p class="project-name">Consulting with the MSGC</p>
+                  <p class="project-type">User Research</p>
                 </div>
               </a>
             </div>
