--- a/projects/MSGC_Consulting.html
+++ b/projects/MSGC_Consulting.html
@@ -75,19 +75,19 @@
 
       <div class="row">
         <div class="col-lg-4 col-sm-12">
-          <img src="../assets/MSGC Consulting/Creating 1.JPG" style="width:100%; height:auto">
+          <img src="../assets/MSGC Consulting/Creating 1.jpg" style="width:100%; height:auto">
         </div>
         <div class="col-lg-4 col-sm-12">
-          <img src="../assets/MSGC Consulting/Creating 2.JPG" style="width:100%; height:auto">
+          <img src="../assets/MSGC Consulting/Creating 2.jpg" style="width:100%; height:auto">
         </div>
         <div class="col-lg-4 col-sm-12">
-          <img src="../assets/MSGC Consulting/Creating 3.JPG" style="width:100%; height:auto">
+          <img src="../assets/MSGC Consulting/Creating 3.jpg" style="width:100%; height:auto">
         </div>
         <div class="col-lg-4 col-sm-12">
-          <img src="../assets/MSGC Consulting/Creating 4.JPG" style="width:100%; height:auto">
+          <img src="../assets/MSGC Consulting/Creating 4.jpg" style="width:100%; height:auto">
         </div>
         <div class="col-lg-4 col-sm-12">
-          <img src="../assets/MSGC Consulting/Creating 5.JPG" style="width:100%; height:auto">
+          <img src="../assets/MSGC Consulting/Creating 5.jpg" style="width:100%; height:auto">
         </div>
       </div>
 
