Found a missing </div>

--- a/projects/MSGC_Consulting.html
+++ b/projects/MSGC_Consulting.html
@@ -94,6 +94,7 @@
       <div class="row">
         <h4>Conclusions</h4>
         <p>We wrote up a final report summarizing our methods and findings from the semester. Due to confidentiality concerns details of our recommendations for their stated problem can't but included here, but please reach out if you'd like to learn more about the details of our analysis.</p>
+      </div>
 
     </div>
 
