Added the current sankey diagram

--- a/projects/Exercise-Visualizations.html
+++ b/projects/Exercise-Visualizations.html
@@ -67,8 +67,9 @@
           <img src="../assets/Exercise Visualizations/Benching Line Graphs.png" style="width:100%; height:auto">
           <p>
             Right now it's hard to tell if there is an upward trend with all the plotted lines. Next up I'll examine plotting them all separately and including some markers for where I bumped my "one-rep max" to help make sense of all the dips in this plot.<br><br>
-            I'm also making some Sankey diagrams to visualize how much weight I'm lifting with each area of my body. Here's the progress I've made so far:
+            I'm also making some Sankey diagrams to visualize how much weight I'm lifting with each area of my body. Here's the progress I've made so far (interactive version <a href="SankeyDiagram.html">here</a>):
           </p>
+          <img src="../assets/Exercise Visualizations/sankeyNetwork.png" style="width:100%; height:auto">
         </div>
       </div>
 
