Linking to data viz project from home page

--- a/index.html
+++ b/index.html
@@ -83,10 +83,11 @@
           </div>
           <div class = "col-sm-4">
             <div class = "thumbnail">
-              <a href = "projects/3D_Emergency.html" style="position:relative; bottom:30px">
-                <img src = "assets/Flower Picture.jpg" alt = "Flower" style = "width:100%">
+              <a href = "projects/Exercise_Visualizations.html" style="position:relative; bottom:30px">
+                <img src = "assets/Exercise Visualizations/sankeyNetwork.png" alt = "Sankey Diagram" style = "width:100%; height:auto">
                 <div class = "caption">
-                  <p class="project-name">Project 3</p>
+                  <p class="project-name">Exercise Visualizations</p>
+                  <p class="project-type">Data Visualization</p>
                 </div>
               </a>
             </div>
