--- a/index.html
+++ b/index.html
@@ -50,13 +50,7 @@
       </div>
     </div>
 
-    <div style="background-color:#9A67EA; padding: 30px;">
-      <div class="container">
-        <h4 style="color:#000000">Work</h4>
-      </div>
-    </div>
-
-    <div style="background-color:#E1E2E1">
+    <div>
       <div class = "container">
         <div class = "row">
           <div class = "col-sm-4">
