--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
       </div>
     </nav>
 
+    <main role="main">
     <div class = "jumbotron jumbotron-fluid" id = "mainJumbotron">
       <div class = "container">
         <div class = "row">
@@ -55,7 +56,7 @@
         <div class = "row">
           <div class = "col-sm-4">
             <div class = "thumbnail">
-              <a href = "projects/3D_Emergency.html" style="position:relative; bottom:30px">
+              <a href = "projects/3D_Emergency.html">
                 <img src = "assets/Centered Logo.png" alt = "3D Emergency" style = "width:100%; height:auto">
                 <div class = "caption">
                   <p class="project-name">3D Emergency</p>
@@ -66,7 +67,7 @@
           </div>
           <div class = "col-sm-4">
             <div class = "thumbnail">
-              <a href = "projects/MSGC_Consulting.html" style="position:relative; bottom:30px">
+              <a href = "projects/MSGC_Consulting.html">
                 <img src = "assets/MSGC Consulting/Creating 1.jpg" alt = "MSGC Consulting" style = "width:100%; height:auto">
                 <div class = "caption">
                   <p class="project-name">Consulting with the MSGC</p>
@@ -77,7 +78,7 @@
           </div>
           <div class = "col-sm-4">
             <div class = "thumbnail">
-              <a href = "projects/Exercise_Visualizations.html" style="position:relative; bottom:30px">
+              <a href = "projects/Exercise_Visualizations.html">
                 <img src = "assets/Exercise Visualizations/sankeyNetwork.png" alt = "Sankey Diagram" style = "width:100%; height:auto">
                 <div class = "caption">
                   <p class="project-name">Exercise Visualizations</p>
@@ -89,6 +90,7 @@
         </div>
       </div>
     </div>
+    </main>
 
   </body>
 </html>
