--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav ml-auto" id="homeNavLinks">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Work</a>
+              <a class="nav-link" href="index.html" style="font-size:14px; letter-spacing:2px; color:#673AB7">WORK</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="About.html">About</a>
+              <a class="nav-link" href="About.html" style="font-size:14px; letter-spacing:2px">ABOUT</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="assets/Jackson Hammond - Resume.pdf">Resume</a>
+              <a class="nav-link" href="assets/Jackson Hammond - Resume.pdf" style="font-size:14px; letter-spacing:2px">RESUME</a>
             </li>
           </ul>
         </div>
