--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
               <a class="nav-link" href="index.html" style="font-size:14px; letter-spacing:2px; color:#673AB7">WORK</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="About.html" style="font-size:14px; letter-spacing:2px">ABOUT</a>
+              <a class="nav-link" href="About.html" style="font-size:14px; letter-spacing:2px; color:#313131">ABOUT</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="assets/Jackson Hammond - Resume.pdf" style="font-size:14px; letter-spacing:2px">RESUME</a>
+              <a class="nav-link" href="assets/Jackson Hammond - Resume.pdf" style="font-size:14px; letter-spacing:2px; color:#313131">RESUME</a>
             </li>
           </ul>
         </div>
