Projects are now two columns
Moved project content into two columns on the home page instead of three

--- a/index.html
+++ b/index.html
@@ -40,21 +40,21 @@
     </nav>
 
     <main role="main">
-    <div class = "jumbotron jumbotron-fluid" id = "mainJumbotron">
+    <div class = "jumbotron jumbotron-fluid d-flex align-items-center" id = "mainJumbotron">
       <div class = "container">
         <div class = "row">
-          <div class = "col-sm-1"></div>
-          <div class = "col-sm-8">
+          <div class = "col-sm-12">
+            <!--- TO DO center this text top-to-bottom and left-to-right --->
             <h3>I'm <strong>Jackson Hammond</strong>, UX Designer and lover of data</h3>
           </div>
         </div>
       </div>
     </div>
 
-    <div>
+
       <div class = "container">
         <div class = "row">
-          <div class = "col-sm-4">
+          <div class = "col-lg-6">
             <div class = "thumbnail">
               <a href = "projects/3D_Emergency.html">
                 <img src = "assets/Centered Logo.png" alt = "3D Emergency" style = "width:100%; height:auto">
@@ -65,7 +65,7 @@
               </a>
             </div>
           </div>
-          <div class = "col-sm-4">
+          <div class = "col-lg-6">
             <div class = "thumbnail">
               <a href = "projects/MSGC_Consulting.html">
                 <img src = "assets/MSGC Consulting/Creating 1.jpg" alt = "MSGC Consulting" style = "width:100%; height:auto">
@@ -76,7 +76,11 @@
               </a>
             </div>
           </div>
-          <div class = "col-sm-4">
+        </div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class = "col-sm-6">
             <div class = "thumbnail">
               <a href = "projects/Exercise_Visualizations.html">
                 <img src = "assets/Exercise Visualizations/sankeyNetwork.png" alt = "Sankey Diagram" style = "width:100%; height:auto">
@@ -89,7 +93,6 @@
           </div>
         </div>
       </div>
-    </div>
     </main>
 
   </body>
