Change column behavior
Project columns all behave the same now

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
       <div class = "container">
         <div class = "row">
-          <div class = "col-lg-6">
+          <div class = "col-md-6 col-sm-12">
             <div class = "thumbnail">
               <a href = "projects/3D_Emergency.html">
                 <img src = "assets/Centered Logo.png" alt = "3D Emergency" style = "width:100%; height:auto">
@@ -65,7 +65,7 @@
               </a>
             </div>
           </div>
-          <div class = "col-lg-6">
+          <div class = "col-md-6 col-sm-12">
             <div class = "thumbnail">
               <a href = "projects/MSGC_Consulting.html">
                 <img src = "assets/MSGC Consulting/Creating 1.jpg" alt = "MSGC Consulting" style = "width:100%; height:auto">
@@ -80,7 +80,7 @@
       </div>
       <div class="container">
         <div class="row">
-          <div class = "col-sm-6">
+          <div class = "col-md-6 col-sm-12">
             <div class = "thumbnail">
               <a href = "projects/Exercise_Visualizations.html">
                 <img src = "assets/Exercise Visualizations/sankeyNetwork.png" alt = "Sankey Diagram" style = "width:100%; height:auto">
