Apply revamp to 3DE project navbar and jumbotron

--- a/projects/3D_Emergency.html
+++ b/projects/3D_Emergency.html
@@ -28,26 +28,26 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav ml-auto" id="homeNavLinks">
             <li class="nav-item">
-              <a class="nav-link" href="http://jbhammon.github.io">Work</a>
+              <a class="nav-link" href="index.html" style="font-size:14px; letter-spacing:2px; color:#673AB7">WORK</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="http://jbhammon.github.io/About.html">About</a>
+              <a class="nav-link" href="About.html" style="font-size:14px; letter-spacing:2px; color:#313131">ABOUT</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="http://jbhammon.github.io/assets/Jackson Hammond - Resume.pdf">Resume</a>
+              <a class="nav-link" href="assets/Jackson Hammond - Resume.pdf" style="font-size:14px; letter-spacing:2px; color:#313131">RESUME</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
 
-    <div class="jumbotron" id="mainJumbotron">
+    <div class="jumbotron" style="color:#313131; background-color:#FFFFFF">
       <div class = "container">
         <div class = "row">
           <h3>3D Emergency</h3>
         </div>
         <div class = "row">
-          <p style="color:#FFFFFF">A solo project focusing on interaction design as a method to improve calling 911 in the United States.<br><br>
+          <p>A solo project focusing on interaction design as a method to improve calling 911 in the United States.<br><br>
           <b>Role:</b> UX Designer and Researcher<br>
           <b>Tools:</b> Adobe Illustrator and Adobe XD</p>
         </div>
