--- a/projects/MSGC_Consulting.html
+++ b/projects/MSGC_Consulting.html
@@ -21,34 +21,34 @@
 
     <nav class="navbar navbar-expand-md fixed-top">
       <div class = "container">
-        <a class="navbar-brand" href="../index.html">Jackson Hammond</a>
+        <a class="navbar-brand" href="#">Jackson Hammond</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav ml-auto" id="homeNavLinks">
             <li class="nav-item">
-              <a class="nav-link" href="http://jbhammon.github.io">Work</a>
+              <a class="nav-link" href="index.html" style="font-size:14px; letter-spacing:2px; color:#673AB7">WORK</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="http://jbhammon.github.io/About.html">About</a>
+              <a class="nav-link" href="About.html" style="font-size:14px; letter-spacing:2px; color:#313131">ABOUT</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="http://jbhammon.github.io/assets/Jackson Hammond - Resume.pdf">Resume</a>
+              <a class="nav-link" href="assets/Jackson Hammond - Resume.pdf" style="font-size:14px; letter-spacing:2px; color:#313131">RESUME</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
 
-    <div class="jumbotron" id="mainJumbotron">
+    <div class="jumbotron" style="color:#313131; background-color:#FFFFFF">
       <div class = "container">
         <div class = "row">
           <h3>Consulting with the MSGC</h3>
         </div>
         <div class = "row">
-          <p style="color:#FFFFFF">A group project focused on user research and qualitative data analysis.<br><br>
-          <b>Role:</b> Customer liaison, Experience Researcher<br>
+          <p>A group project focused on user research and qualitative data analysis.<br><br>
+          <b>Role:</b> Customer Liaison, Experience Researcher<br>
           <b>Tools:</b> Contextual Inquiry</p>
         </div>
       </div>
