--- a/About.html
+++ b/About.html
@@ -16,25 +16,27 @@
   </head>
   <body>
 
-      <nav class="navbar navbar-expand-lg" style = "background-color: #FFC205">
-        <a class="navbar-brand" href="index.html">Jackson Hammond</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <nav class="navbar navbar-expand-md fixed-top">
+      <div class = "container">
+        <a class="navbar-brand" href="#">Jackson Hammond</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav ml-auto" >
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Work</a>
+              <a class="nav-link" href="index.html">WORK</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="About.html">About</a>
+              <a class="nav-link current-link" href="About.html">ABOUT</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="assets/Jackson Hammond - Resume.pdf">Resume</a>
+              <a class="nav-link" href="assets/Jackson Hammond - Resume.pdf">RESUME</a>
             </li>
           </ul>
         </div>
-      </nav>
+      </div>
+    </nav>
 
     <div class = "container" style = "margin-top:100px">
       <div class = "row">
@@ -47,7 +49,7 @@
 
         </div>
         <div class = "col-sm-6">
-          <img src = "assets/Picture of me.jpg" style = "width:100%">
+          <img src = "assets/Picture of me.jpg" style = "width:80%; image-orientation:from-image;">
         </div>
       </div>
     </div>
