--- a/projects/Exercise_Visualizations.html
+++ b/projects/Exercise_Visualizations.html
@@ -28,13 +28,13 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav ml-auto" id="homeNavLinks">
             <li class="nav-item">
-              <a class="nav-link" href="index.html" style="font-size:14px; letter-spacing:2px; color:#673AB7">WORK</a>
+              <a class="nav-link" href="index.html">WORK</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="About.html" style="font-size:14px; letter-spacing:2px; color:#313131">ABOUT</a>
+              <a class="nav-link" href="About.html">ABOUT</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="assets/Jackson Hammond - Resume.pdf" style="font-size:14px; letter-spacing:2px; color:#313131">RESUME</a>
+              <a class="nav-link" href="assets/Jackson Hammond - Resume.pdf">RESUME</a>
             </li>
           </ul>
         </div>
