--- a/projects/3D_Emergency.html
+++ b/projects/3D_Emergency.html
@@ -41,7 +41,7 @@
       </div>
     </nav>
 
-    <div class="jumbotron" style="color:#313131; background-color:#FFFFFF">
+    <div class="jumbotron project-jumbotron">
       <div class = "container">
         <div class = "row">
           <h3>3D Emergency</h3>
