Adding skeleton of a footer

--- a/index.html
+++ b/index.html
@@ -95,5 +95,12 @@
       </div>
     </main>
 
+    <footer>
+      <div class="container">
+        <h5>Feel free to reach out if you want to connect!</h5>
+        <a href="mailto:jbhammon@umich.edu" style="margin-top:20px">jbhammon@umich.edu</a>
+      </div>
+    </footer>
+
   </body>
 </html>
