--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <link rel = "stylesheet" type = "text/css" href = "main.css">
     <link href="https://fonts.googleapis.com/css?family=Rubik:300,500" rel="stylesheet">
 
+    <!-- Add icon library -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
     <title>Jackson Hammond</title>
   </head>
   <body>
@@ -97,8 +101,13 @@
 
     <footer>
       <div class="container">
-        <h5>Feel free to reach out if you want to connect!</h5>
-        <a href="mailto:jbhammon@umich.edu" style="margin-top:20px">jbhammon@umich.edu</a>
+        <h5>Feel free to reach out if you want to connect or jusy say hi!</h5>
+        <a class="footer-email" href="mailto:jbhammon@umich.edu">jbhammon@umich.edu</a>
+        <div class="social-links">
+          <a href="#" class="fa fa-github"></a>
+          <a href="#" class="fa fa-medium"></a>
+          <a href="#" class="fa fa-linkedin"></a>
+        </div>
       </div>
     </footer>
 
