--- a/index.html
+++ b/index.html
@@ -104,10 +104,11 @@
         <h5>Feel free to reach out if you want to connect or jusy say hi!</h5>
         <a class="footer-email" href="mailto:jbhammon@umich.edu">jbhammon@umich.edu</a>
         <div class="social-links">
-          <a href="#" class="fa fa-github"></a>
-          <a href="#" class="fa fa-medium"></a>
-          <a href="#" class="fa fa-linkedin"></a>
+          <a href="https://github.com/jbhammon" class="fa fa-github"></a>
+          <a href="https://medium.com/@malts18" class="fa fa-medium"></a>
+          <a href="https://www.linkedin.com/in/jackson-hammond-b428a481/" class="fa fa-linkedin"></a>
         </div>
+        <small class="footer-copyright">Tied together with Bootstrap 4 &#169; 2019 Jackson Hammond</small>
       </div>
     </footer>
 
