Fixing navbar links across pages

--- a/About.html
+++ b/About.html
@@ -22,7 +22,7 @@
 
     <nav class="navbar navbar-expand-md fixed-top">
       <div class = "container">
-        <a class="navbar-brand" href="#">Jackson Hammond</a>
+        <a class="navbar-brand" href="index.html">Jackson Hammond</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
