--- a/projects/3D_Emergency.html
+++ b/projects/3D_Emergency.html
@@ -24,20 +24,20 @@
 
     <nav class="navbar navbar-expand-md fixed-top">
       <div class = "container">
-        <a class="navbar-brand" href="#">Jackson Hammond</a>
+        <a class="navbar-brand" href="../index.html">Jackson Hammond</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav ml-auto" id="homeNavLinks">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">WORK</a>
+              <a class="nav-link" href="../index.html">WORK</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="About.html">ABOUT</a>
+              <a class="nav-link" href="../About.html">ABOUT</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="assets/Jackson Hammond - Resume.pdf">RESUME</a>
+              <a class="nav-link" href="../assets/Jackson Hammond - Resume.pdf">RESUME</a>
             </li>
           </ul>
         </div>
